# binner

./: .gitignore  CMakeLists.txt  DataManager.cpp  H5PlanckDataManager.cpp  README  abinner.cpp  binner.cpp  config.xml  debug.xml  dst.cpp  go  go.pbs  gohop  h5cat  hopper.pbs  k.pbs  read_fits_lib.c  testFEVbr.cpp
compiletests/: CMakeLists.txt
include/: CreateMatrices.h  DataManager.h  H5PlanckDataManager.h  MapWriter.h  PlanckDataManager.h  PointingStruct.h  ReadParameterFile.h  ReadParameterFile30.h  ReadParameterFile44.h  TestHelpers.h  Utils.h  read_fits_lib.h
obsolete/: DataManager.cpp  PlanckDataManager.cpp  read_fits.h  read_fits_lib.c
test/: CMakeLists.txt  readh5.cpp  test_creatematrices.cpp  test_datamanager.cpp  test_h5planckdatamanager.cpp  test_planckdatamanager.cpp  test_read_fits_lib.cpp  test_test.cpp  testreadh5.sh
tools/: h5cat  hopper.pbs  pbsgo  plot.py  plot.sh
