add_executable(test_test test_test.cpp)
add_test(test_test test_test)
target_link_libraries(test_test )
add_dependencies(check test_test)

add_executable(test_read_fits_lib test_read_fits_lib.cpp)
add_test(test_read_fits_lib test_read_fits_lib)
target_link_libraries(test_read_fits_lib boost_unit_test_framework read_fits_lib cfitsio)
add_dependencies(check test_read_fits_lib)

add_executable(test_datamanager test_datamanager.cpp)
add_test(test_datamanager test_datamanager)
target_link_libraries(test_datamanager boost_unit_test_framework DataManager read_fits_lib cfitsio trilinos_teuchos)
add_dependencies(check test_datamanager)
